# webcode-i18n-manager

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: app.jsx  bridge.js  i18n.js  index.html  main.js  modals.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: i18n_commands.rs  mod.rs
