[package]
name = "webcode-i18n-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "webcode_i18n_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
dirs = "5"
regex = "1"
